# render

./: CMakeLists.txt  make.sh  model.ply
src/: main.cpp
